--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     font-size: 0.9em;
+    color: #000
 }
 
 #instructions-panel ul {
